Adjust CSS padding and margins

--- a/index.html
+++ b/index.html
@@ -8,35 +8,57 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header">
-        <div class="logo">Logo</div>
-        <div class="header-links">
-            <ul>
-                <li>Link 1</li>
-                <li>Link 2</li>
-                <li>Link 3</li>
-            </ul>
+    <div class="top">
+        <div class="header">
+            <div class="logo">Header logo</div>
+            <div class="header-links">
+                <ul>
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <div class="hero">
-        <div class="hero-text">
-        Hero text
-        </div>
-        <div class="hero-img">
-            Hero image
+        <div class="hero">
+            <div class="hero-head">
+                <div class="hero-main">This website is awesome</div>
+                <div class="hero-text">This website has some subtext that goes here under the main title. It's a smaller font and the other color is lower contrast.</div>
+                <button class="hero-button">Sign up</button>
+            </div>
+            <div class="hero-img">
+                This is a placeholder for an image
+            </div>
         </div>
     </div>
     <div class="content">
-        <div class="info">Info 1</div>
-        <div class="info">Info 2</div>
-        <div class="info">Info 3</div>
-        <div class="info">Info 4</div>
+        <div class="info-head">Some random information.</div>
+        <div class="info-text">
+            <div class="info">
+                <div class="square"></div>
+                <div class="text">this is some subtext under an illustration or image</div> 
+            </div>
+            <div class="info">
+                <div class="square"></div>
+                <div class="text">this is some subtext under an illustration or image</div> 
+            </div>
+            <div class="info">
+                <div class="square"></div>
+                <div class="text">this is some subtext under an illustration or image</div> 
+            </div>
+            <div class="info">
+                <div class="square"></div>
+                <div class="text">this is some subtext under an illustration or image</div> 
+            </div>
+        </div>
     </div>
-    <div class="quote">Quote
+    <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
     </div>
     <div class="call">
-        <div>Call to action text</div>
-        <button>Sign up</button>
+        <div class="call-text">
+            <div class="call-head">Call to action! It's time!</div>
+            <div class="call-body">Sign up for our product by clicking the button right over there!</div>
+        </div>     
+        <button class="call-button">Sign up</button>
     </div>
 
     <div class="footer">
